# LLMVoiceAssistant

./: .gitignore  CMakeLists.txt  README.md  buildAssistant.sh  buildComplete.sh  getLlamaCpp.sh  getWhisperCpp.sh
documentation/: llamacppInstructions.md  whispercppInstructions.md
include/: assistantUtils.h  llmInference.h  speechRecognition.h
src/: assistantUtils.cpp  llmInference.cpp  main.cpp  speechRecognition.cpp
